<resources>
    <!-- sidebar -->
    <string name="app_name">HotelKu</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="info_pemesanan">Info Pemesanan</string>
    <string name="daftar_hotel">Daftar Hotel</string>
    <string name="riwayat_pemesanan">Riwayat Pemesanan</string>
    <string name="nama_akun">Nama Akun</string>
    <string name="daftarhotel">Daftar Hotel</string>
    <string name="infopemesanan">Info Pemesanan</string>
    <string name="riwayatpemesanan">Riwayat Pemesanan</string>

    <!-- main content -->
    <string name="bengkalis">Bengkalis</string>
    <string name="inhil">Inhil</string>
    <string name="inhu">Inhu</string>
    <string name="kampar">Kampar</string>
    <string name="meranti">Meranti</string>
    <string name="kuansing">Kuansing</string>
    <string name="pelelawan">Pelelawan</string>
    <string name="rohil">Rohil</string>
    <string name="rohul">Rohul</string>
    <string name="siak">Siak</string>
    <string name="dumai">Dumai</string>
    <string name="pekanbaru">Pekanbaru</string>

    <!-- daftar hotel -->
    <string name="nama_hotel">Nama Hotel</string>
    <string name="rating_hotel">Rating Hotel</string>
    <string name="alamat_hotel">Alamat Hotel</string>
    <string name="rating">Rating Hotel</string>

    <!-- Daftar Kamar -->
    <string name="jenis__kamar">Nama Kamar</string>
    <string name="jenis_tempattidur">Jenis Kasur</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="harga">Harga Kamar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>