<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="false">
    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">
        <ImageView
            android:id="@+id/iv_infopemesanan"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:src="@drawable/grandhotelpku"/>
        <TextView
            android:id="@+id/txt_namahotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/iv_infopemesanan"
            android:text="@string/nama_hotel"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/txt_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/iv_infopemesanan"
            android:layout_below="@id/txt_namahotel"
            android:text="@string/rating_hotel"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/txt_alamathotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/iv_infopemesanan"
            android:layout_below="@id/txt_rating"
            android:text="@string/alamat_hotel"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/btn_rincian"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:layout_alignParentRight="true"
            android:textAlignment="center"
            android:text="Rincian"
            android:textSize="10sp"
            android:layout_below="@id/txt_alamathotel"
    </RelativeLayout>

</androidx.cardview.widget.CardView>