<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/txt_rincianpemesanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:text="Rincinan Pemesanan"
        android:textSize="25sp" />

    <RelativeLayout
        android:id="@+id/cv_rincianpemesanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/txt_rincianpemesanan"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_rincianpemesanan"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/txt_namahotelrincian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/iv_rincianpemesanan"
            android:text="@string/nama_hotel"/>
        <TextView
            android:id="@+id/txt_ratingrincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/iv_rincianpemesanan"
            android:layout_below="@id/txt_namahotelrincian"
            android:text="@string/rating_hotel"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/txt_alamathotelrincian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/iv_rincianpemesanan"
            android:layout_below="@id/txt_ratingrincian"
            android:text="@string/alamat_hotel"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/txt_detailpemesananrincian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="Detail Pemesanan :"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@id/iv_rincianpemesanan"/>
        <TextView
            android:id="@+id/txt_idpemesananrincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_below="@id/txt_detailpemesananrincian"
            android:text="ID Pemesanan "
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/txt_isiidpemesananrincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@id/txt_idpemesananrincian"
            android:layout_below="@id/txt_detailpemesananrincian"
            android:text="ABC123QWE"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/txt_nomorkamarrincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_below="@id/txt_idpemesananrincian"
            android:text="Nomor Kamar "
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/txt_isinomorkamarrincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@id/txt_nomorkamarrincian"
            android:layout_below="@id/txt_isiidpemesananrincian"
            android:text="123"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/txt_jeniskamarrincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_below="@id/txt_nomorkamarrincian"
            android:text="Jenis Kamar "
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/txt_isijeniskamarrincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@id/txt_jeniskamarrincian"
            android:layout_below="@id/txt_isinomorkamarrincian"
            android:text="Deluxe Double"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/txt_jumlahkasurrincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_below="@id/txt_jeniskamarrincian"
            android:text="Jumlah Kasur "
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/txt_isijumlahkasurrincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@id/txt_jeniskamarrincian"
            android:layout_below="@id/txt_isijeniskamarrincian"
            android:text="2 Kasur"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/txt_waktucheckinrincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_below="@id/txt_jumlahkasurrincian"
            android:text="Waktu Check In "
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/txt_isiwaktucheckinrincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@id/txt_waktucheckinrincian"
            android:layout_below="@id/txt_isijumlahkasurrincian"
            android:text="Sen, 21 November 2022(14:00)"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/txt_waktucheckoutrincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_below="@id/txt_waktucheckinrincian"
            android:text="Waktu Check Out "
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/txt_isiwaktucheckoutrincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@id/txt_waktucheckoutrincian"
            android:layout_below="@id/txt_isiwaktucheckinrincian"
            android:text="Sel, 22 November 2022(12:00)"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/txt_biayarincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_below="@id/txt_waktucheckoutrincian"
            android:text="Total Biaya "
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/txt_isibiayarincian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@id/txt_biayarincian"
            android:layout_below="@id/txt_isiwaktucheckoutrincian"
            android:text="Rp 400.000"
            android:layout_alignParentRight="true"/>

        <Button
            android:id="@+id/btn_kembalirincian"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_below="@id/txt_biayarincian"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:text="Kembali"
            android:textSize="10sp" />
    </RelativeLayout>

</RelativeLayout>